AC_INIT(README)
AM_INIT_AUTOMAKE(neXtaw, 0.15.1)

AC_PROG_AWK
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S
AC_ISC_POSIX

AM_PROG_LIBTOOL

AC_PATH_XTRA
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_HEADER_MAJOR

AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_STRUCT_TM

AC_CHECK_NEXTAW

AC_OUTPUT(Makefile \
	doc/Makefile doc/app-defaults/Makefile \
	X11/Makefile X11/neXtaw/Makefile \
	programs/Makefile programs/neXtclock/Makefile)
